--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         .container {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(5, 1fr);
             grid-gap: 10px;
             max-width: 600px;
             width: 100%;
@@ -66,10 +66,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="category"></div>
         <div class="category">90's</div>
         <div class="category">80's</div>
         <div class="category">Green Day</div>
+        <div class="category">Category 4</div>
+        <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
@@ -77,7 +78,9 @@
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
+        <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="category">Pop</div>
+        <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
         <div class="cell"><input type="text" placeholder="Enter Song"></div>
