--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
 <body>
     <div class="container">
         <div class="empty-box"></div>
-        <div class="category">Top Category 1</div>
-        <div class="category">Top Category 2</div>
-        <div class="category">Top Category 3</div>
+        <div class="category">90's</div>
+        <div class="category">80's</div>
+        <div class="category">Green Day</div>
 
-        <div class="category">Side Category 2</div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
+        <div class="category">Rock</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Smells Like Teen Spirit</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Sweet Child o' Mine</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Basket Case</div>
 
-        <div class="category">Side Category 3</div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
+        <div class="category">Pop</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Billie Jean</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Like a Virgin</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Thriller</div>
 
-        <div class="category">Side Category 4</div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
+        <div class="category">Hip-Hop</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Lose Yourself</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Empire State of Mind</div>
+        <div class="cell"><input type="text" placeholder="Enter Answer">Sicko Mode</div>
     </div>
     <button id="checkButton">Check Answers</button>
     <script>
