--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="category">Rock</div>
         <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Basket Case</div></div>
         <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Sweet Child o' Mine</div></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">When I Come Around</div></div>
+        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Smells Like Teen Spirit</div></div>
 
         <div class="category">Pop</div>
         <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Billie Jean</div></div>
