--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
         <div class="empty-box"></div>
         <div class="category">90's</div>
         <div class="category">80's</div>
-        <div class="category">Green Day</div>
+        <div class="category">Ed Sheeran</div>
 
         <div class="category">Rock</div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Basket Case</div></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Sweet Child o' Mine</div></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Smells Like Teen Spirit</div></div>
+        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Under the bridge</div></div>
+        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Paradise City</div></div>
+        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Blow</div></div>
 
         <div class="category">Pop</div>
         <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Billie Jean</div></div>
         <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Like a Virgin</div></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Thriller</div></div>
+        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Bad Habits</div></div>
 
         <div class="category">Hip-Hop</div>
         <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Lose Yourself</div></div>
         <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Empire State of Mind</div></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Sicko Mode</div></div>
+        <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">You Need Me, I Don't Need You</div></div>
     </div>
     <button id="checkButton">Check Answers</button>
     <script>
